--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: freezona
+name: 최대현
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 전력계통 및 스마트그리드 연구실
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://freezona.github.io
