--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 최대현
 description: 전력계통 및 스마트그리드 연구실
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ![a_photo_39](https://cloud.githubusercontent.com/assets/7651577/6588879/83ef1db8-c7db-11e4-885b-c97667eab9f7.jpg)
+avatar: https://cloud.githubusercontent.com/assets/7651577/6588879/83ef1db8-c7db-11e4-885b-c97667eab9f7.jpg
 
 #
 # Flags below are optional
